2010-04-23	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/packetfence.spec: Added perl(Readonly::XS) as a dependency. 
	Readonly becomes faster with it.

2010-04-20	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/cgi-bin/release.cgi: Added validation in release.cgi and displays
	error if something unexpected happens (if user messes with POST data)
	Fixes #961;
	http://www.packetfence.org/mantis/view.php?id=961

2010-04-19	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/packetfence.spec: packetfence-remote-snort-sensor package is back!
	Fixes #888;
	http://www.packetfence.org/mantis/view.php?id=888

	* pf/lib/pf/services.pm: Improved error-handling with broken switch
	configuration. Fixes #766;
	- switches_conf_is_valid() is now able to tell if the same switch was 
	  specified more than once and will give helpful error message (in 
	  logs/packetfence.log).
	- in generate_snmptrapd_conf() we now avoid bad switch with duplicated 
	  IPs
	- pfsetvlan will start even if errors were detected in switches.conf
	- with test case
	http://www.packetfence.org/mantis/view.php?id=766

	* pf/html/admin/common.php: Regular expression in web admin has been
	losen up so that a logwarn is reported as an error. Fixes 964;
	http://www.packetfence.org/mantis/view.php?id=964

2010-04-15	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/html/admin/configuration/switches_add.php, 
	pf/html/admin/configuration/switches_edit.php: Truncated long names.
	Fixes 923;
	http://www.packetfence.org/mantis/view.php?id=923

	* pf/html/admin/login.php: Link on the PacketFence logo on the login
	page now longer links to localhost. Fixes 885;
	http://www.packetfence.org/mantis/view.php?id=885

	* pf/html/admin/status/sajax-dashboard.php: Memory display in the 
	dashboard no longer includes buffers and cache. We were getting too
	many complains about 99% usage when the linux memory manager was doing
	its job right. Fixes #916;
	http://www.packetfence.org/mantis/view.php?id=916
